<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Smart Health BD</string>
    <string name="gender">লিঙ্গ</string>
    <string-array name="id_card_list">
        <item>সিলেক্ট করুন</item>
        <item>NID</item>
        <item>BRID</item>
        <item>System ID</item>
    </string-array>
    <string-array name="member_id_type">
        <item>সিলেক্ট করুন</item>
        <item>NID</item>
        <item>BRID</item>
    </string-array>
    <string-array name="year_epi">
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
        <item>2021</item>
    </string-array>
    <string name="center_type">Center Type</string>
    <string-array name="designation_array">
        <item>HA</item>
        <item>HI/AHI</item>
        <item>FPI</item>
        <item>Vaccinator Supervisor</item>
        <item>Clinic manager</item>
    </string-array>
    <string-array name="transportation_type">
        <item>Rickshaw</item>
        <item>Bicycle</item>
        <item>Van</item>
        <item>Boat</item>
        <item>By walk</item>
        <item>Boat,By walk,Rickshaw</item>
    </string-array>
    <string-array name="status_epi">
        <item>All</item>
        <item>Not created</item>
        <item>Pending</item>
        <item>Approved</item>
    </string-array>
    <string-array name="years">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
    </string-array>
    <string name="member_import">সদস্য ইম্পোর্ট</string>
    <string name="report">GMP রিপোর্ট</string>
    <string name="due_visit">সর্বশেষ সেবা গ্রহণের তারিখ \n %1$s \n সংখ্যা: %2$s</string>
    <string name="gender_prompt">লিঙ্গ বাছাই করুন</string>
    <string name="logo">logo</string>
    <string name="login_title">HEALTH,NUTRITION AND POPULATION PROGRAMME</string>
    <string name="nav_logo">HEALTH,NUTRITION AND POPULATION PROGRAMME</string>
    <string name="due_only">Referred</string>
    <string name="anc_payment">গর্ভবতী পরিচর্যা</string>
    <string name="pnc_payment">প্রসবোত্তর পরিচর্যা</string>
    <string name="women_payment">নারী সেবা প্যাকেজ</string>
    <string name="iycf_payment">শিশু সেবা প্যাকেজ (আই.ওয়াই.সি.এফ)</string>
    <string name="ncd_payment">অসংক্রামক রোগের সেবা</string>
    <string name="adolscent_payment">কিশোরী সেবা প্যাকেজ</string>
    <string name="eyetest_payment">চক্ষু পরীক্ষা</string>
    <string name="blood_group_payment">ব্লাড গ্রুপ</string>
    <string name="menu_all_clients">সকল ক্লায়েন্ট</string>
    <string name="menu_all_families">খানার তালিকা</string>
    <string name="menu_adult">প্রাপ্তবয়স্ক তালিকা</string>
    <string name="menu_migration">স্থানান্তর</string>
    <string name="menu_adult_risk">ঝুঁকিপূর্ণ ও জরুরী</string>
    <string name="menu_elco_clients">সক্ষম দম্পতি</string>
    <string name="menu_anc_clients">গর্ভবতী মায়ের তালিকা</string>
    <string name="menu_anc_risk_clients">ঝুঁকিপূর্ণ ও জরুরী</string>
    <string name="menu_pnc_clients">প্রসূতি মায়ের তালিকা</string>
    <string name="menu_ado_clients">কিশোরী তালিকা</string>
    <string name="menu_women_clients">নারী সেবা তালিকা</string>
    <string name="menu_iycf_clients">আই ওয়াই সি এফ সেবা তালিকা</string>
    <string name="menu_child_clients">শিশু তালিকা</string>
    <string name="menu_all_member">সব সদস্য তালিকা</string>
    <string name="menu_troubleshoot" translatable="false">ট্রাবলশুট</string>
    <string name="menu_update_location">আপডেট লোকেশন </string>
    <string name="force_sync_text" translatable="false">আপনার ডাটা সিঙ্ক হতে প্রব্লেম হলে সার্ভার অ্যাডমিন এর অনুমতি ক্রমে নিচের "ফোর্স সিঙ্ক " বাটন এ ছাপ দিন।
 \n * আপনার অনুমতি না থাকলে এটা কাজ করবে না</string>
    <string name="invalid_data_count">আপনার ডিভাইস এ ইনভ্যালিড ডাটা আছে :</string>
    <string name="menu_forum">ফোরাম</string>
    <string name="menu_notification">নোটিফিকেশন</string>
    <string name="menu_payment">পেমেন্ট</string>
    <string name="menu_bkash">বিকাশ পেমেন্ট</string>
    <string name="menu_stock_details">লেনদেনের সারসংক্ষেপ</string>
    <string name="menu_new_stock">নতুন স্টক আসছে</string>
    <string name="menu_end_stock">যে সব স্টক শেষ হয়ে যাচ্ছে</string>
    <string name="menu_edd_this_month">এই মাসে ইডিডি যাদের</string>
    <string name="menu_ss_info">স্বাস্থ্য সেবিকা তথ্য</string>
    <string name="menu_guest_member">বহিরাগত সেবা</string>
    <string name="guest_member">বহিরাগত সদস্য</string>
    <string name="menu_simprints">সদস্য খুঁজি</string>
    <string name="unique_id_form_field">সিস্টেম নাম্বার</string>
    <string name="union_zone">ইউনিয়ন/ জোন</string>
    <string name="ss_year">বছর নির্বাচন করুন</string>
    <string name="ss_month">মাস নির্বাচন করুন</string>
    <string name="old_ward">পুরাতন ওয়ার্ড</string>
    <string name="new_ward">নতুন ওয়ার্ড</string>
    <string name="block_outreach">সাব-ব্লক/ সাইট</string>
    <string name="division_refer">বিভাগ(রেফার)</string>
    <string name="refer_place">রেফারের স্থান</string>
    <string name="district_refer">জেলা/সিটি কর্পোরেশন(রেফার)</string>
    <string name="division_per">বিভাগ(স্থায়ী)</string>
    <string name="district_per">জেলা/সিটি কর্পোরেশন(স্থায়ী)</string>
    <string name="upazila_per">উপজেলা/থানা(স্থায়ী)</string>
    <string name="division">বিভাগ</string>
    <string name="district">জেলা/সিটি কর্পোরেশন</string>
    <string name="upazila">উপজেলা/থানা</string>
    <string name="paurosova_per">পৌরসভা(স্থায়ী)</string>
    <string name="paurosova">পৌরসভা</string>
    <string name="union_per">ইউনিয়ন/ জোন (স্থায়ী)</string>
    <string name="post_office_per">ডাকঘর(স্থায়ী ঠিকানা)</string>
    <string name="post_office_present">ডাকঘর(বর্তমান ঠিকানা)</string>
    <string name="last_submission_date">সেবা গ্রহণের তারিখ: %s</string>
    <string name="member_migration">সদস্য অনুসন্ধান</string>
    <string name="hh_migration">সদস্য স্থানান্তর</string>
    <string name="title_kishori">কিশোরী ফোরাম</string>
    <string name="title_nari">নারী ফোরাম</string>
    <string name="title_child">শিশু ফোরাম</string>
    <string name="title_ncd">সাধারণ ফোরাম</string>
    <string name="title_adult">অ্যাডাল্ট ফোরাম</string>
    <string name="risk_history">পূর্বের ঝুঁকিপূর্ণ ইতিহাস</string>
    <string name="clicked_sick_child">You have clicked the sick child follow-up action</string>
    <string name="clicked_malaria_diagnosis">You have clicked the malaria diagnosis action</string>
    <string name="referral_for">Referral for %s</string>
    <string name="full_referral_info">View full referral info?</string>
    <string name="back_to_referrals">Back to Referrals</string>
    <string name="return_to">Return to %s</string>
    <string name="mark_as_done">Mark as Done</string>
    <string name="view_profile">View Profile</string>
    <string name="chw_phone">CHW Phone</string>
    <string name="chw">CHW</string>
    <string name="referral_date">Referral date</string>
    <string name="problem">Problem</string>
    <string name="phone">Phone</string>
    <string name="client_name_suffix">%s,</string>
    <string name="care_giver_prefix">CG: %s</string>
    <string name="mark_as_done_title">Mark as done?</string>
    <string name="mark_as_done_message">Referral will closed and disappear from app</string>
    <string name="powered_by_brac">Copyright © BRAC 2019 </string>
    <string name="powered_by_mpower">Developed by: mPower </string>
    <string name="member_count">খানার মোট সদস্যঃ %s</string>
    <string name="nid">জাতীয় পরিচয় পত্র: %s</string>
    <string name="bid">জন্ম নিবন্ধন: %s</string>
    <string name="registered_count"><br>সদস্য:</br> %s</string>
    <string name="next_visit_date">পরবর্তী দেখার তারিখ: %s</string>
    <string name="house_hold_id">খানা: <br>%s</br> (%s)</string>
    <string name="saving">সংরক্ষণ হচ্ছে ...</string>
    <string name="saving_dialog_title">সংরক্ষণ হচ্ছে ...</string>
    <string name="phone_no">মোবাইল : %s</string>
    <string name="ss_name"><br>ব্লক: </br> %s</string>
    <string name="delivery_date">প্রসবের তারিখ: </string>
    <string name="serial_no"><br>খানা সিরিয়াল :</br> %s</string>
    <string name="name"><br>নাম :</br> %s</string>
    <string name="search_name_or_id">নাম বা আইডি বা মোবাইল নম্বর দ্বারা অনুসন্ধান করুন</string>
    <string name="home">হোম</string>
    <string name="job_aids">ড্যাশবোর্ড</string>
    <string name="add_family">খানা নিবন্ধন</string>
    <string name="add_family_member">সদস্য যোগ করুন</string>
    <string name="add_member_title">সদস্য যোগ করুন</string>
    <string name="save">জমা দিন</string>
    <string name="all_families">খানার তালিকা</string>
    <string name="finger_print_added"><![CDATA[<b><font color=#3797ca>ফিঙ্গার প্রিন্ট দ্বারা নিবন্ধিত</font></b>]]></string>
    <string name="finger_print_without"><![CDATA[<font color=#FF0000>ফিঙ্গার প্রিন্ট ছাড়া নিবন্ধিত</font>]]></string>
    <string name="add_member_title_question">আপনি কোন ধরণের পরিবারের সদস্য যুক্ত করতে চান?</string>
    <string name="add_child_under_five">৫ বছরের কম বয়সী শিশু</string>
    <string name="add_other_family_member">পরিবারের অন্য সদস্য</string>
    <string name="filter_village_name">গ্রাম : %s</string>
    <string name="filter_month_name">মাস : %s</string>
    <string name="claster_village_name">ক্লাস্টার : %s</string>
    <string name="add_new_family_member">নতুন সদস্য যোগ করুন</string>
    <string name="gender_male">M</string>
    <string name="gender_female">F</string>
    <string name="Male">M</string>
    <string name="Female">F</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="abbrv_years">\u0020 বছর</string>
    <string name="abbrv_months">\u0020 মাস</string>
    <string name="abbrv_weeks">\u0020 সপ্তাহ</string>
    <string name="abbrv_days">\u0020 দিন</string>
    <string name="relation_with_member_and_head">সম্পর্ক : %s</string>
    <string name="care_giver_initials">মায়ের নাম :  %s</string>
    <string name="age">বয়স :  %s</string>
    <string name="only_age">বয়স</string>
    <string name="house_hold_head_name">খানা প্রধানের নামঃ  %s</string>
    <string name="child_register_title">শিশু তালিকা</string>
    <string name="edit_child_form_title">এডিট ৫ বছরের কম বয়সী শিশু</string>
    <string name="log_out_as">লগ আউট : </string>
    <string name="nav_sync">সিঙ্ক</string>
    <string name="simprints_init_fail">প্রকল্প আইডি বা ব্যবহারকারী আইডি বা মডিউল আইডি পাওয়া যায় নি। অ্যাডমিনের সাথে যোগাযোগ করুন</string>
    <string name="filter">ফিল্টার</string>
    <string name="ss_migration">এখানে স্থানান্তর করি</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="drop_out">Drop Out</string>
    <string name="aefi_child">AEFI Child</string>
    <string name="nurse_name">স্বাস্থ্য সেবিকার নাম :</string>
    <string name="village_name">গ্রামের নামঃ</string>
    <string name="cluster">ক্লাস্টারঃ</string>
    <string name="date_only">তারিখ</string>
    <string name="forum_name">ফোরামের নাম</string>
    <string name="no_of_participant">অংশগ্রহণকারী সংখ্যা</string>
    <string name="details">বিস্তারিত</string>
    <string name="select_re_assign_vill">যে গ্রামে স্থানান্তর করতে চাচ্ছেন তা সিলেক্ট করুন</string>
    <string name="dont_know">জানা নেই,খুঁজে দেখতে চাই</string>
    <string name="cause_for_not_getting_actual_info">নিচের কোন কারণে সঠিক সদস্য পাওয়া যায়নি ?</string>
    <string name="member_not_reg_with_finger">এই ব্যক্তি ফিঙ্গারপ্রিন্ট দ্বারা রেজিস্টার্ড নয়</string>
    <string name="wrong_fingerprint">রেজিস্ট্রেশন এ ভুল আঙুলের ছাপ দেওয়া হয়েছে</string>
    <string name="fingerprint_provided">খুঁজে বের করতে ভুল আঙুলের ছাপ দেওয়া হয়েছে</string>
    <string name="fingerprint_not_provided_right_way">আঙুলের ছাপ সঠিক নিয়মে দেওয়া হয়নি</string>
    <string name="wrong_state">ভুল এলাকা নির্ধারণ করা হয়েছে</string>
    <string name="try_again_if_wrong">* ভুল হয়ে থাকলে আরেকবার চেষ্টা করুন</string>
    <string name="try_another_time">আরেকবার চেষ্টা করি</string>
    <string name="search_from_menu">মেনু থেকে খুজুন</string>
</resources>