<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cause_for_not_getting_actual_info"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <CheckBox
        android:id="@+id/check_box_0"
        android:text="@string/member_not_reg_with_finger"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/check_box_1"
        android:text="@string/wrong_fingerprint"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/check_box_2"
        android:text="@string/fingerprint_provided"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/check_box_3"
        android:text="@string/fingerprint_not_provided_right_way"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/check_box_4"
        android:text="@string/wrong_state"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/check_box_5"
        android:text="@string/dont_know"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_again_if_wrong"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <LinearLayout
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/retry_btn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button_bg"
            android:ems="10"
            android:shadowColor="#ffffff"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="0.5"
            android:textStyle="bold"
            android:text="@string/try_another_time"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <Button
            android:id="@+id/close_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/red_round"
            android:ems="10"
            android:shadowColor="#ffffff"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="0.5"
            android:textStyle="bold"
            android:text="@string/search_from_menu"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>