<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:gravity="center"
    android:background="@color/light_gray"
    android:orientation="vertical">
    <LinearLayout
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/select_re_assign_vill"
            android:textColor="@color/black"
            android:textSize="18sp"/>


    </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nurse_name"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/ss_filter_spinner"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:background="@drawable/spinner_resource"
                android:layout_margin="5dp"
                android:layout_height="50dp">
            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/village_name"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <Spinner
                android:id="@+id/village_filter_spinner"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:background="@drawable/spinner_resource"
                android:layout_margin="5dp"
                android:layout_height="50dp">

            </Spinner>



            <Button
                android:id="@+id/filter_apply_button"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_button_bg"
                android:ems="10"
                android:shadowColor="#ffffff"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="0.5"
                android:textStyle="bold"
                android:text="@string/ss_migration"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp" />



</LinearLayout>