<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:weightSum="3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/aefi_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/rounded_blue_btn"
        android:drawableStart="@android:drawable/ic_dialog_alert"
        android:drawablePadding="5dp"
        android:drawableTint="@color/red"
        android:padding="10dp"
        android:layout_weight="1"
        android:text="@string/aefi_child"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/drop_out_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/drop_out_button" />

    <Button
        android:id="@+id/drop_out_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/rounded_blue_btn"
        android:drawableStart="@drawable/ic_calender"
        android:drawablePadding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableTint="@color/red"
        android:padding="10dp"
        android:layout_weight="1"
        android:text="@string/drop_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reset_filter_button"
        app:layout_constraintStart_toEndOf="@+id/aefi_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reset_filter_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/rounded_blue_btn"
        android:drawableStart="@android:drawable/ic_delete"
        android:drawablePadding="5dp"
        android:drawableTint="@color/red"
        android:padding="10dp"
        android:layout_weight="1"
        android:text="@string/reset_filter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>